Resolved a longstanding bug where an infinite loop could potentially happen when adding float or int values to a matrix.
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@3524 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a